...
    <string name="app_name">QuickCash</string>
    <string name="LOGIN_SUCCESS">Login successful!</string>
    <string name="LOGIN_ERROR_EMAIL_EMPTY">Email required to log in</string>
    <string name="LOGIN_ERROR_EMAIL_INVALID">Account not found. Please register</string>
    <string name="LOGIN_ERROR_PASSWORD_EMPTY">Password required to log in</string>
    <string name="LOGIN_ERROR_PASSWORD_INCORRECT">Incorrect email or password</string>
    <string name="EMPTY_FIELD_ERROR">Please enter all fields!</string>
    <string name="INVALID_EMAIL_ERROR">Invalid email!</string>
    <string name="JOB_POSTING_SUCCESSFUL">Job has been posted successfully :D</string>
    <string name="JOB_POSTING_FAILED">Job could not be posted :o</string>
    <string name="LACK_OF_FILLED_FIELDS">Fill up 2 or more fields to post a job</string>
    <string name="REGISTRATION_SUCCESS_MESSAGE">Registration successful :)</string>
    <string name="DUPLICATE_EMAIL_ERROR">Email already associated with account :/</string>

...
