<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/employerJobPageFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9bcf9f"
    tools:context=".ui.employeeHome.EmployeeHomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/dashboardCardView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="263dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_inner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            app:cardBackgroundColor="#8BC34A"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#9bcf9f">

                <TextView
                    android:id="@+id/jobPageTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="Title"
                    android:textAlignment="center"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/jobPageType"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="Job Type: "
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jobPageTitle" />

                <TextView
                    android:id="@+id/jobPageAddress"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="Address: "
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jobPageType" />

                <TextView
                    android:id="@+id/jobPageSalary"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="Min. salary: "
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jobPageAddress" />

                <TextView
                    android:id="@+id/jobPageDate"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="Start date: "
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jobPageSalary" />

                <TextView
                    android:id="@+id/jobPageEmployerName"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="Employer: "
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/jobPageDate" />

                <TextView
                    android:id="@+id/jobPageApplicant"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="Applicant: "
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jobPageEmployerName" />

                <TextView
                    android:id="@+id/jobPageDesc"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:lines="8"
                    android:maxLines="8"
                    android:text="Description"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jobPageApplicant" />

                <Button
                    android:id="@+id/applicantsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="104dp"
                    android:layout_marginTop="24dp"
                    android:text="View Applicants"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:backgroundTint="#e4e278"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/jobPageDesc" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/jobPageBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="#346e2c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>